# disaster-relief-system

./: .gitignore  README.md  app.js  app.py  build.sh  package-lock.json  styles.css
backend_c/: CMakeLists.txt  Makefile  graph.c
backend_c/include/: allocation.h  fileio.h  graph.h  hashmap.h  heap.h  report.h  types.h
backend_c/src/: allocation.c  fileio.c  graph.c  hashmap.c  heap.c  main.c  report.c
data/: disaster_config.txt  edges.txt  graph_input.txt  input.txt  region_resources.txt  region_resources_map.txt  regions.txt  report.txt  requests.txt  resources.txt
frontend/: app.js  index.html
frontend_python/: app.py  test_input.txt
frontend_python/static/: script.js
frontend_python/templates/: index.html
